Added Colab work

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -549,7 +549,7 @@
     "from langchain.callbacks.tracers import ConsoleCallbackHandler\n",
     "\n",
     "# response = rag_chain.invoke({\"question\": \"What is Anna Bosman's email address?\"}, config={'callbacks': [ConsoleCallbackHandler()]})\n",
-    "response = rag_chain.invoke({\"question\": \"What is Anna Bosman's email address?\"})"
+    "# response = rag_chain.invoke({\"question\": \"What is Anna Bosman's email address?\"})"
    ]
   },
   {
@@ -570,6 +570,37 @@
    ],
    "source": [
     "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing a QA Chain from LangChain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.chains import RetrievalQAWithSourcesChain\n",
+    "qa_chain = RetrievalQAWithSourcesChain.from_chain_type(\n",
+    "    llm=llm,\n",
+    "    chain_type=\"stuff\",\n",
+    "    retriever=retriever\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qa_chain_response = qa_chain(\"What is Anna Bosman's email address?\")\n",
+    "qa_chain_response"
    ]
   },
   {
